syntax = "proto3";

package order;

option go_package = "Acho-mj/2025_Golang_MSA/backend/gen/services/order/api;api";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message OrderItem{
    string product_id = 1;
    int32 quantity = 2;
}
message Order {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  string created_at = 5;
}

// 주문 생성
message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}
message CreateOrderResponse {
  Order order = 1;
}

// 주문 조회
message GetOrderRequest {
  string order_id = 1;
}
message GetOrderResponse {
  Order order = 1;
}